@@ -1,3 +1,7 @@
+2002-05-23  Martin Vidner  <mvidner@suse.cz>
+
+	* man/yptest.8.in: Fix some typos
+
 2002-05-13  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.7
